codemp/generated/game/g_ICARUScb.h

int ICARUS_VariableDeclared( const char *name );
int ICARUS_GetFloatVariable( const char *name, float *value );
void ICARUS_SetVar( int taskID, int entID, const char *type_name, const char *data );
void G_DebugPrint( int printLevel, const char *format, ... );
static char *Q3_GetAnimLower( gentity_t *ent );
static char *Q3_GetAnimUpper( gentity_t *ent );
static char *Q3_GetAnimBoth( gentity_t *ent );
int Q3_PlaySound( int taskID, int entID, const char *name, const char *channel );
void Q3_Play( int taskID, int entID, const char *type, const char *name );
void anglerCallback( gentity_t *ent );
void moverCallback( gentity_t *ent );
void Blocked_Mover( gentity_t *ent, gentity_t *other );
void moveAndRotateCallback( gentity_t *ent );
void Q3_Lerp2Start( int entID, int taskID, float duration );
void Q3_Lerp2End( int entID, int taskID, float duration );
void Q3_Lerp2Pos( int taskID, int entID, vec3_t origin, vec3_t angles, float duration );
void Q3_Lerp2Angles( int taskID, int entID, vec3_t angles, float duration );
int Q3_GetTag( int entID, const char *name, int lookup, vec3_t info );
void Q3_Use( int entID, const char *target );
void Q3_Kill( int entID, const char *name );
void Q3_RemoveEnt( gentity_t *victim );
void Q3_Remove( int entID, const char *name );
int Q3_GetFloat( int entID, int type, const char *name, float *value );
int Q3_GetVector( int entID, int type, const char *name, vec3_t value );
int Q3_GetString( int entID, int type, const char *name, char **value );
void MoveOwner( gentity_t *self );
static qboolean Q3_SetTeleportDest( int entID, vec3_t org );
static void Q3_SetOrigin( int entID, vec3_t origin );
static void Q3_SetCopyOrigin( int entID, const char *name );
static void Q3_SetVelocity( int entID, int axis, float speed );
static void Q3_SetAngles( int entID, vec3_t angles );
void Q3_Lerp2Origin( int taskID, int entID, vec3_t origin, float duration );
static void Q3_SetOriginOffset( int entID, int axis, float offset );
static void Q3_SetEnemy( int entID, const char *name );
static void Q3_SetLeader( int entID, const char *name );
static qboolean Q3_SetNavGoal( int entID, const char *name );
static void SetLowerAnim( int entID, int animID );
static void SetUpperAnim( int entID, int animID );
static qboolean Q3_SetAnimUpper( int entID, const char *anim_name );
static qboolean Q3_SetAnimLower( int entID, const char *anim_name );
static void Q3_SetAnimHoldTime( int entID, int int_data, qboolean lower );
static void Q3_SetHealth( int entID, int data );
static void Q3_SetArmor( int entID, int data );
static qboolean Q3_SetBState( int entID, const char *bs_name );
static qboolean Q3_SetTempBState( int entID, const char *bs_name );
static void Q3_SetDefaultBState( int entID, const char *bs_name );
static void Q3_SetDPitch( int entID, float data );
static void Q3_SetDYaw( int entID, float data );
static void Q3_SetShootDist( int entID, float data );
static void Q3_SetVisrange( int entID, float data );
static void Q3_SetEarshot( int entID, float data );
static void Q3_SetVigilance( int entID, float data );
static void Q3_SetVFOV( int entID, int data );
static void Q3_SetHFOV( int entID, int data );
static void Q3_SetWidth( int entID, int data );
static void Q3_SetTimeScale( int entID, const char *data );
static void Q3_SetInvisible( int entID, qboolean invisible );
static void Q3_SetVampire( int entID, qboolean vampire );
static void Q3_SetGreetAllies( int entID, qboolean greet );
static void Q3_SetViewTarget( int entID, const char *name );
static void Q3_SetWatchTarget( int entID, const char *name );
void Q3_SetLoopSound( int entID, const char *name );
void Q3_SetICARUSFreeze( int entID, const char *name, qboolean freeze );
void Q3_SetViewEntity( int entID, const char *name );
static void Q3_SetWeapon( int entID, const char *wp_name );
static void Q3_SetItem( int entID, const char *item_name );
static void Q3_SetWalkSpeed( int entID, int int_data );
static void Q3_SetRunSpeed( int entID, int int_data );
static void Q3_SetYawSpeed( int entID, float float_data );
static void Q3_SetAggression( int entID, int int_data );
static void Q3_SetAim( int entID, int int_data );
static void Q3_SetFriction( int entID, int int_data );
static void Q3_SetGravity( int entID, float float_data );
static void Q3_SetWait( int entID, float float_data );
static void Q3_SetShotSpacing( int entID, int int_data );
static void Q3_SetFollowDist( int entID, float float_data );
static void Q3_SetScale( int entID, float float_data );
static float Q3_GameSideCheckStringCounterIncrement( const char *string );
static void Q3_SetCount( int entID, const char *data );
static void Q3_SetTargetName( int entID, const char *targetname );
static void Q3_SetTarget( int entID, const char *target );
static void Q3_SetTarget2( int entID, const char *target2 );
static void Q3_SetRemoveTarget( int entID, const char *target );
static void Q3_SetPainTarget( int entID, const char *targetname );
static void Q3_SetFullName( int entID, const char *fullName );
static void Q3_SetMusicState( const char *dms );
static void Q3_SetForcePowerLevel( int entID, int forcePower, int forceLevel );
void Q3_SetParm( int entID, int parmNum, const char *parmValue );
static void Q3_SetCaptureGoal( int entID, const char *name );
static void Q3_SetEvent( int entID, const char *event_name );
static void Q3_SetIgnorePain( int entID, qboolean data );
static void Q3_SetIgnoreEnemies( int entID, qboolean data );
static void Q3_SetIgnoreAlerts( int entID, qboolean data );
static void Q3_SetNoTarget( int entID, qboolean data );
static void Q3_SetDontShoot( int entID, qboolean add );
static void Q3_SetDontFire( int entID, qboolean add );
static void Q3_SetFireWeapon( int entID, qboolean add );
static void Q3_SetInactive( int entID, qboolean add );
static void Q3_SetFuncUsableVisible( int entID, qboolean visible );
static void Q3_SetLockedEnemy( int entID, qboolean locked );