codemp/julia/generated/game/g_ICARUScb.jl

ICARUS_VariableDeclared( name_ ) = ccall((:ICARUS_VariableDeclared, lib), Int32, ( Ptr{Char},  ), name_ );
ICARUS_GetFloatVariable( name_, value_ ) = ccall((:ICARUS_GetFloatVariable, lib), Int32, ( Ptr{Char}, Ptr{Float32},  ), name_, value_ );
ICARUS_SetVar( taskID_, entID_, type_name_, data_ ) = ccall((:ICARUS_SetVar, lib), Void, ( Int32, Int32, Ptr{Char}, Ptr{Char},  ), taskID_, entID_, type_name_, data_ );
#G_DebugPrint( printLevel_, format_, _ ) = ccall((:G_DebugPrint, lib), Void, ( Int32, Ptr{Char}, ,  ), printLevel_, format_, _ );
Q3_GetAnimLower( ent_ ) = ccall((:Q3_GetAnimLower, lib), Ptr{Char}, ( Ptr{gentity_t},  ), ent_ );
Q3_GetAnimUpper( ent_ ) = ccall((:Q3_GetAnimUpper, lib), Ptr{Char}, ( Ptr{gentity_t},  ), ent_ );
Q3_GetAnimBoth( ent_ ) = ccall((:Q3_GetAnimBoth, lib), Ptr{Char}, ( Ptr{gentity_t},  ), ent_ );
Q3_PlaySound( taskID_, entID_, name_, channel_ ) = ccall((:Q3_PlaySound, lib), Int32, ( Int32, Int32, Ptr{Char}, Ptr{Char},  ), taskID_, entID_, name_, channel_ );
Q3_Play( taskID_, entID_, type_, name_ ) = ccall((:Q3_Play, lib), Void, ( Int32, Int32, Ptr{Char}, Ptr{Char},  ), taskID_, entID_, type_, name_ );
anglerCallback( ent_ ) = ccall((:anglerCallback, lib), Void, ( Ptr{gentity_t},  ), ent_ );
moverCallback( ent_ ) = ccall((:moverCallback, lib), Void, ( Ptr{gentity_t},  ), ent_ );
Blocked_Mover( ent_, other_ ) = ccall((:Blocked_Mover, lib), Void, ( Ptr{gentity_t}, Ptr{gentity_t},  ), ent_, other_ );
moveAndRotateCallback( ent_ ) = ccall((:moveAndRotateCallback, lib), Void, ( Ptr{gentity_t},  ), ent_ );
Q3_Lerp2Start( entID_, taskID_, duration_ ) = ccall((:Q3_Lerp2Start, lib), Void, ( Int32, Int32, Float32,  ), entID_, taskID_, duration_ );
Q3_Lerp2End( entID_, taskID_, duration_ ) = ccall((:Q3_Lerp2End, lib), Void, ( Int32, Int32, Float32,  ), entID_, taskID_, duration_ );
Q3_Lerp2Pos( taskID_, entID_, origin_, angles_, duration_ ) = ccall((:Q3_Lerp2Pos, lib), Void, ( Int32, Int32, vec3_t, vec3_t, Float32,  ), taskID_, entID_, origin_, angles_, duration_ );
Q3_Lerp2Angles( taskID_, entID_, angles_, duration_ ) = ccall((:Q3_Lerp2Angles, lib), Void, ( Int32, Int32, vec3_t, Float32,  ), taskID_, entID_, angles_, duration_ );
Q3_GetTag( entID_, name_, lookup_, info_ ) = ccall((:Q3_GetTag, lib), Int32, ( Int32, Ptr{Char}, Int32, vec3_t,  ), entID_, name_, lookup_, info_ );
Q3_Use( entID_, target_ ) = ccall((:Q3_Use, lib), Void, ( Int32, Ptr{Char},  ), entID_, target_ );
Q3_Kill( entID_, name_ ) = ccall((:Q3_Kill, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_RemoveEnt( victim_ ) = ccall((:Q3_RemoveEnt, lib), Void, ( Ptr{gentity_t},  ), victim_ );
Q3_Remove( entID_, name_ ) = ccall((:Q3_Remove, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_GetFloat( entID_, type_, name_, value_ ) = ccall((:Q3_GetFloat, lib), Int32, ( Int32, Int32, Ptr{Char}, Ptr{Float32},  ), entID_, type_, name_, value_ );
Q3_GetVector( entID_, type_, name_, value_ ) = ccall((:Q3_GetVector, lib), Int32, ( Int32, Int32, Ptr{Char}, vec3_t,  ), entID_, type_, name_, value_ );
Q3_GetString( entID_, type_, name_, value_ ) = ccall((:Q3_GetString, lib), Int32, ( Int32, Int32, Ptr{Char}, Ptr{Ptr{Char}},  ), entID_, type_, name_, value_ );
MoveOwner( self_ ) = ccall((:MoveOwner, lib), Void, ( Ptr{gentity_t},  ), self_ );
Q3_SetTeleportDest( entID_, org_ ) = ccall((:Q3_SetTeleportDest, lib), qboolean, ( Int32, vec3_t,  ), entID_, org_ );
Q3_SetOrigin( entID_, origin_ ) = ccall((:Q3_SetOrigin, lib), Void, ( Int32, vec3_t,  ), entID_, origin_ );
Q3_SetCopyOrigin( entID_, name_ ) = ccall((:Q3_SetCopyOrigin, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetVelocity( entID_, axis_, speed_ ) = ccall((:Q3_SetVelocity, lib), Void, ( Int32, Int32, Float32,  ), entID_, axis_, speed_ );
Q3_SetAngles( entID_, angles_ ) = ccall((:Q3_SetAngles, lib), Void, ( Int32, vec3_t,  ), entID_, angles_ );
Q3_Lerp2Origin( taskID_, entID_, origin_, duration_ ) = ccall((:Q3_Lerp2Origin, lib), Void, ( Int32, Int32, vec3_t, Float32,  ), taskID_, entID_, origin_, duration_ );
Q3_SetOriginOffset( entID_, axis_, offset_ ) = ccall((:Q3_SetOriginOffset, lib), Void, ( Int32, Int32, Float32,  ), entID_, axis_, offset_ );
Q3_SetEnemy( entID_, name_ ) = ccall((:Q3_SetEnemy, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetLeader( entID_, name_ ) = ccall((:Q3_SetLeader, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetNavGoal( entID_, name_ ) = ccall((:Q3_SetNavGoal, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, name_ );
SetLowerAnim( entID_, animID_ ) = ccall((:SetLowerAnim, lib), Void, ( Int32, Int32,  ), entID_, animID_ );
SetUpperAnim( entID_, animID_ ) = ccall((:SetUpperAnim, lib), Void, ( Int32, Int32,  ), entID_, animID_ );
Q3_SetAnimUpper( entID_, anim_name_ ) = ccall((:Q3_SetAnimUpper, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, anim_name_ );
Q3_SetAnimLower( entID_, anim_name_ ) = ccall((:Q3_SetAnimLower, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, anim_name_ );
Q3_SetAnimHoldTime( entID_, int_data_, lower_ ) = ccall((:Q3_SetAnimHoldTime, lib), Void, ( Int32, Int32, qboolean,  ), entID_, int_data_, lower_ );
Q3_SetHealth( entID_, data_ ) = ccall((:Q3_SetHealth, lib), Void, ( Int32, Int32,  ), entID_, data_ );
Q3_SetArmor( entID_, data_ ) = ccall((:Q3_SetArmor, lib), Void, ( Int32, Int32,  ), entID_, data_ );
Q3_SetBState( entID_, bs_name_ ) = ccall((:Q3_SetBState, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, bs_name_ );
Q3_SetTempBState( entID_, bs_name_ ) = ccall((:Q3_SetTempBState, lib), qboolean, ( Int32, Ptr{Char},  ), entID_, bs_name_ );
Q3_SetDefaultBState( entID_, bs_name_ ) = ccall((:Q3_SetDefaultBState, lib), Void, ( Int32, Ptr{Char},  ), entID_, bs_name_ );
Q3_SetDPitch( entID_, data_ ) = ccall((:Q3_SetDPitch, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetDYaw( entID_, data_ ) = ccall((:Q3_SetDYaw, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetShootDist( entID_, data_ ) = ccall((:Q3_SetShootDist, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetVisrange( entID_, data_ ) = ccall((:Q3_SetVisrange, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetEarshot( entID_, data_ ) = ccall((:Q3_SetEarshot, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetVigilance( entID_, data_ ) = ccall((:Q3_SetVigilance, lib), Void, ( Int32, Float32,  ), entID_, data_ );
Q3_SetVFOV( entID_, data_ ) = ccall((:Q3_SetVFOV, lib), Void, ( Int32, Int32,  ), entID_, data_ );
Q3_SetHFOV( entID_, data_ ) = ccall((:Q3_SetHFOV, lib), Void, ( Int32, Int32,  ), entID_, data_ );
Q3_SetWidth( entID_, data_ ) = ccall((:Q3_SetWidth, lib), Void, ( Int32, Int32,  ), entID_, data_ );
Q3_SetTimeScale( entID_, data_ ) = ccall((:Q3_SetTimeScale, lib), Void, ( Int32, Ptr{Char},  ), entID_, data_ );
Q3_SetInvisible( entID_, invisible_ ) = ccall((:Q3_SetInvisible, lib), Void, ( Int32, qboolean,  ), entID_, invisible_ );
Q3_SetVampire( entID_, vampire_ ) = ccall((:Q3_SetVampire, lib), Void, ( Int32, qboolean,  ), entID_, vampire_ );
Q3_SetGreetAllies( entID_, greet_ ) = ccall((:Q3_SetGreetAllies, lib), Void, ( Int32, qboolean,  ), entID_, greet_ );
Q3_SetViewTarget( entID_, name_ ) = ccall((:Q3_SetViewTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetWatchTarget( entID_, name_ ) = ccall((:Q3_SetWatchTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetLoopSound( entID_, name_ ) = ccall((:Q3_SetLoopSound, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetICARUSFreeze( entID_, name_, freeze_ ) = ccall((:Q3_SetICARUSFreeze, lib), Void, ( Int32, Ptr{Char}, qboolean,  ), entID_, name_, freeze_ );
Q3_SetViewEntity( entID_, name_ ) = ccall((:Q3_SetViewEntity, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetWeapon( entID_, wp_name_ ) = ccall((:Q3_SetWeapon, lib), Void, ( Int32, Ptr{Char},  ), entID_, wp_name_ );
Q3_SetItem( entID_, item_name_ ) = ccall((:Q3_SetItem, lib), Void, ( Int32, Ptr{Char},  ), entID_, item_name_ );
Q3_SetWalkSpeed( entID_, int_data_ ) = ccall((:Q3_SetWalkSpeed, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetRunSpeed( entID_, int_data_ ) = ccall((:Q3_SetRunSpeed, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetYawSpeed( entID_, float_data_ ) = ccall((:Q3_SetYawSpeed, lib), Void, ( Int32, Float32,  ), entID_, float_data_ );
Q3_SetAggression( entID_, int_data_ ) = ccall((:Q3_SetAggression, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetAim( entID_, int_data_ ) = ccall((:Q3_SetAim, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetFriction( entID_, int_data_ ) = ccall((:Q3_SetFriction, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetGravity( entID_, float_data_ ) = ccall((:Q3_SetGravity, lib), Void, ( Int32, Float32,  ), entID_, float_data_ );
Q3_SetWait( entID_, float_data_ ) = ccall((:Q3_SetWait, lib), Void, ( Int32, Float32,  ), entID_, float_data_ );
Q3_SetShotSpacing( entID_, int_data_ ) = ccall((:Q3_SetShotSpacing, lib), Void, ( Int32, Int32,  ), entID_, int_data_ );
Q3_SetFollowDist( entID_, float_data_ ) = ccall((:Q3_SetFollowDist, lib), Void, ( Int32, Float32,  ), entID_, float_data_ );
Q3_SetScale( entID_, float_data_ ) = ccall((:Q3_SetScale, lib), Void, ( Int32, Float32,  ), entID_, float_data_ );
Q3_GameSideCheckStringCounterIncrement( string_ ) = ccall((:Q3_GameSideCheckStringCounterIncrement, lib), Float32, ( Ptr{Char},  ), string_ );
Q3_SetCount( entID_, data_ ) = ccall((:Q3_SetCount, lib), Void, ( Int32, Ptr{Char},  ), entID_, data_ );
Q3_SetTargetName( entID_, targetname_ ) = ccall((:Q3_SetTargetName, lib), Void, ( Int32, Ptr{Char},  ), entID_, targetname_ );
Q3_SetTarget( entID_, target_ ) = ccall((:Q3_SetTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, target_ );
Q3_SetTarget2( entID_, target2_ ) = ccall((:Q3_SetTarget2, lib), Void, ( Int32, Ptr{Char},  ), entID_, target2_ );
Q3_SetRemoveTarget( entID_, target_ ) = ccall((:Q3_SetRemoveTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, target_ );
Q3_SetPainTarget( entID_, targetname_ ) = ccall((:Q3_SetPainTarget, lib), Void, ( Int32, Ptr{Char},  ), entID_, targetname_ );
Q3_SetFullName( entID_, fullName_ ) = ccall((:Q3_SetFullName, lib), Void, ( Int32, Ptr{Char},  ), entID_, fullName_ );
Q3_SetMusicState( dms_ ) = ccall((:Q3_SetMusicState, lib), Void, ( Ptr{Char},  ), dms_ );
Q3_SetForcePowerLevel( entID_, forcePower_, forceLevel_ ) = ccall((:Q3_SetForcePowerLevel, lib), Void, ( Int32, Int32, Int32,  ), entID_, forcePower_, forceLevel_ );
Q3_SetParm( entID_, parmNum_, parmValue_ ) = ccall((:Q3_SetParm, lib), Void, ( Int32, Int32, Ptr{Char},  ), entID_, parmNum_, parmValue_ );
Q3_SetCaptureGoal( entID_, name_ ) = ccall((:Q3_SetCaptureGoal, lib), Void, ( Int32, Ptr{Char},  ), entID_, name_ );
Q3_SetEvent( entID_, event_name_ ) = ccall((:Q3_SetEvent, lib), Void, ( Int32, Ptr{Char},  ), entID_, event_name_ );
Q3_SetIgnorePain( entID_, data_ ) = ccall((:Q3_SetIgnorePain, lib), Void, ( Int32, qboolean,  ), entID_, data_ );
Q3_SetIgnoreEnemies( entID_, data_ ) = ccall((:Q3_SetIgnoreEnemies, lib), Void, ( Int32, qboolean,  ), entID_, data_ );
Q3_SetIgnoreAlerts( entID_, data_ ) = ccall((:Q3_SetIgnoreAlerts, lib), Void, ( Int32, qboolean,  ), entID_, data_ );
Q3_SetNoTarget( entID_, data_ ) = ccall((:Q3_SetNoTarget, lib), Void, ( Int32, qboolean,  ), entID_, data_ );
Q3_SetDontShoot( entID_, add_ ) = ccall((:Q3_SetDontShoot, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetDontFire( entID_, add_ ) = ccall((:Q3_SetDontFire, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetFireWeapon( entID_, add_ ) = ccall((:Q3_SetFireWeapon, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetInactive( entID_, add_ ) = ccall((:Q3_SetInactive, lib), Void, ( Int32, qboolean,  ), entID_, add_ );
Q3_SetFuncUsableVisible( entID_, visible_ ) = ccall((:Q3_SetFuncUsableVisible, lib), Void, ( Int32, qboolean,  ), entID_, visible_ );
Q3_SetLockedEnemy( entID_, locked_ ) = ccall((:Q3_SetLockedEnemy, lib), Void, ( Int32, qboolean,  ), entID_, locked_ );
